SERVER-83964 Collect query stats even if database does not exist

There is a special case for this path which just needed to be updated.
This patch also refactors some testing to cut down on redundant
starting/stopping of ShardingTests.

GitOrigin-RevId: 00f12b3ac6d1a580a5f32113e9e91806e74b0bd5