jstests/noPassthrough/queryStats/query_stats_find_cmd_collect_on_mongos.js
@@ -5,39 +5,32 @@
 
 import {
     assertExpectedResults,
+    getLatestQueryStatsEntry,
     getQueryStats,
     getQueryStatsFindCmd
 } from "jstests/libs/query_stats_utils.js";
 
-const setup = () => {
-    const st = new ShardingTest({
-        mongos: 1,
-        shards: 1,
-        config: 1,
-        rs: {nodes: 1},
-        mongosOptions: {
-            setParameter: {
-                internalQueryStatsRateLimit: -1,
-                'failpoint.skipClusterParameterRefresh': "{'mode':'alwaysOn'}"
-            }
-        },
-    });
-    const mongos = st.s;
-    const db = mongos.getDB("test");
-    const coll = db.coll;
-    coll.insert({v: 1});
-    coll.insert({v: 4});
-    return st;
-};
+const st = new ShardingTest({
+    mongos: 1,
+    shards: 1,
+    config: 1,
+    rs: {nodes: 1},
+    mongosOptions: {
+        setParameter: {
+            internalQueryStatsRateLimit: -1,
+            'failpoint.skipClusterParameterRefresh': "{'mode':'alwaysOn'}"
+        }
+    },
+});
+const mongos = st.s;
+const db = mongos.getDB("test");
+const coll = db.coll;
+coll.insert({v: 1});
+coll.insert({v: 4});
 
 // Assert that, for find queries, no query stats results are written until a cursor has reached
 // exhaustion; ensure accurate results once they're written.
 {
-    const st = setup();
-    const db = st.s.getDB("test");
-    const collName = "coll";
-    const coll = db[collName];
-
     const queryStatsKey = {
         queryShape: {
             cmdNs: {db: "test", coll: "coll"},
@@ -89,21 +82,17 @@ const setup = () => {
                           /* expectedDocsReturnedMin */ 0,
                           /* expectedDocsReturnedSumOfSq */ 5,
                           /* getMores */ true);
-
-    st.stop();
 }
 
 // Assert on batchSize-limited find queries that killCursors will write metrics with partial results
 // to the query stats store.
 {
-    const st = setup();
-    const db = st.s.getDB("test");
-    const collName = "coll";
-    const coll = db[collName];
-
+    const coll2 = db.coll2;
+    coll2.insert({v: 1});
+    coll2.insert({v: 4});
     const queryStatsKey = {
         queryShape: {
-            cmdNs: {db: "test", coll: "coll"},
+            cmdNs: {db: "test", coll: "coll2"},
             command: "find",
             filter: {$and: [{v: {$gt: "?number"}}, {v: {$lt: "?number"}}]},
         },
@@ -112,14 +101,13 @@ const setup = () => {
         client: {application: {name: "MongoDB Shell"}}
     };
 
-    const cursor1 = coll.find({v: {$gt: 0, $lt: 5}}).batchSize(1);  // returns 1 doc
-    const cursor2 = coll.find({v: {$gt: 0, $lt: 2}}).batchSize(1);  // returns 1 doc
+    const cursor1 = coll2.find({v: {$gt: 0, $lt: 5}}).batchSize(1);  // returns 1 doc
+    const cursor2 = coll2.find({v: {$gt: 0, $lt: 2}}).batchSize(1);  // returns 1 doc
 
     assert.commandWorked(
-        db.runCommand({killCursors: coll.getName(), cursors: [cursor1.getId(), cursor2.getId()]}));
-    const queryStats = getQueryStats(db);
-    assert.eq(1, queryStats.length);
-    assertExpectedResults(queryStats[0],
+        db.runCommand({killCursors: coll2.getName(), cursors: [cursor1.getId(), cursor2.getId()]}));
+    const queryStats = getLatestQueryStatsEntry(db);
+    assertExpectedResults(queryStats,
                           queryStatsKey,
                           /* expectedExecCount */ 2,
                           /* expectedDocsReturnedSum */ 2,
@@ -127,5 +115,14 @@ const setup = () => {
                           /* expectedDocsReturnedMin */ 1,
                           /* expectedDocsReturnedSumOfSq */ 2,
                           /* getMores */ false);
-    st.stop();
 }
+
+// SERVER-83964 Test that query stats are collected if the database doesn't exist.
+{
+    const nonExistentDB = db.getSiblingDB("newDB");
+    assert.eq(null, nonExistentDB.anything.findOne());
+    const entry = getLatestQueryStatsEntry(db, {collName: "anything"});
+    assert.neq(null, entry);
+}
+
+st.stop();
